# hfortix-forticare

./: .gitignore  .readthedocs.yaml  EXAMPLES.py  README.md  autocomplete_demo.py  pyproject.toml  test_types.py
docs/source/: api_reference.rst  conf.py  index.rst  overview.rst  quickstart.rst  ratelimit.rst  session.rst
hfortix_forticare/: __init__.py  __init__.pyi  models.py  models.pyi  py.typed  types.py
hfortix_forticare/api/v3/: __init__.py  __init__.pyi
hfortix_forticare/api/v3/contracts/: __init__.py  list.py  list.pyi
hfortix_forticare/api/v3/folders/: __init__.py  create.py  create.pyi  delete.py  delete.pyi  list.py  list.pyi
hfortix_forticare/api/v3/licenses/: __init__.py  download.py  download.pyi  list.py  list.pyi  register.py  register.pyi
hfortix_forticare/api/v3/products/: __init__.py  decommission.py  decommission.pyi  description.py  description.pyi  details.py  details.pyi  folder.py  folder.pyi  list.py  list.pyi  location.py  location.pyi  register.py  register.pyi  transfer.py  transfer.pyi
hfortix_forticare/api/v3/services/: __init__.py  register.py  register.pyi
